--- a/mini-hackathon-3-frontend/src/index.css
+++ b/mini-hackathon-3-frontend/src/index.css
@@ -22,14 +22,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -54,9 +46,62 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  width: 500px;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+button {
+  margin-left: 30px;
+}
 
 #root {
   margin: 30px auto;
+}
+
+.main-info-wrapper {
+  display: flex;
+  gap: 20px;
+  margin: 0 auto;
+  width: 80%;
+}
+
+.large-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.small-info {
+  display: flex;
+  gap: 30px;
+  width: 400px;
+  margin: 0 auto;
+  font-style: italic;
+  margin-top: 30px;
+}
+
+.credits {
+  margin: 0 auto;
+  flex-wrap: nowrap;
+  display: flex;
+  width: min-content;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.credits p {
+  white-space: nowrap;
+}
+
+.search {
+  margin: 0 auto;
+  width: min-content;
+  flex-wrap: nowrap;
+  display: flex;
 }
 
 @media (prefers-color-scheme: light) {
