--- a/mini-hackathon-3-frontend/src/index.css
+++ b/mini-hackathon-3-frontend/src/index.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #10171A;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,9 +36,11 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #59F0D6;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #102423;
+  margin-left: 30px;
 }
 button:hover {
   border-color: #646cff;
@@ -51,10 +55,6 @@ input {
   padding: 10px;
   border-radius: 5px;
   font-size: 16px;
-}
-
-button {
-  margin-left: 30px;
 }
 
 #root {
@@ -115,4 +115,12 @@ button {
   button {
     background-color: #f9f9f9;
   }
+}
+
+span {
+  background: #59F0D6;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  color: #102423;
 }
