--- a/mini-hackathon-3-frontend/src/index.css
+++ b/mini-hackathon-3-frontend/src/index.css
@@ -20,6 +20,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -42,9 +43,11 @@ button {
   color: #102423;
   margin-left: 30px;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -65,6 +68,8 @@ input {
   display: flex;
   gap: 20px;
   margin: 0 auto;
+  flex-direction: row;
+  justify-content: center;
   width: 80%;
 }
 
@@ -73,6 +78,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 340px;
 }
 
 .small-info {
@@ -114,6 +120,20 @@ input {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (max-width: 750px) {
+  img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 660px) {
+  .search {
+    width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 
